--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>경제</li>
         <li>정치</li>
      </ol>
-     <a href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/H1IRUS1vEFA"><img src="책 이미지.jpg" width ="30%"></a>
+     <a href="https://unsplash.com/ko/%EC%82%AC%EC%A7%84/H1IRUS1vEFA"><img src="bookimg.jpg" width ="30%"></a>
     <br>
     많은 사랑을 받았다. 걱정이 앞섰다. 더 나은 결과물을 만들 수 있지 않았을까
     </br>
